tests/NormalTests/paczka1/fuzzy1/30349624.err
Error in line 3: eel7OJ0 A94 15,2
Error in line 4: eel7OJ0 A883 19,6
Error in line 6: eel7OJ0 S461 36,2
Error in line 9: TF3Nv A883 11,63
Error in line 14: KkA58U4S A883 11,5
Error in line 19: A94 A94 68,7
Error in line 24: QOtGHG2q A94 85,4
Error in line 18: eel7OJ0 S461 14,5
Error in line 28: QOtGHG2q A883 68,5
Error in line 25: TF3Nv A883 51,1
Error in line 32: XJTVtU3Z A810 78,2
Error in line 38: A94 A810 2,6
